// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkbox [snapshot] > md, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="false"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="mixed"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="indeterminate"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="true"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="false"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="mixed"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="indeterminate"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, disabled, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="true"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="checked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="false"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="mixed"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="indeterminate"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md"
>
  <button
    aria-checked="true"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="false"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="mixed"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="indeterminate"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > md, required, disabled, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-md vesper-checkbox-disabled"
>
  <button
    aria-checked="true"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="checked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-lg vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="false"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="mixed"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="indeterminate"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="true"
    aria-required="false"
    class="vesper-checkbox-box"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="false"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="mixed"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="indeterminate"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, disabled, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="true"
    aria-required="false"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="checked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="false"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="unchecked"
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="mixed"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="indeterminate"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm"
>
  <button
    aria-checked="true"
    aria-required="true"
    class="vesper-checkbox-box"
    data-state="checked"
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: false 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="false"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="unchecked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  />
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: indeterminate 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="mixed"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="indeterminate"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="indeterminate"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;

exports[`checkbox [snapshot] > sm, required, disabled, checked: true 1`] = `
<label
  class="vesper-checkbox vesper-checkbox-sm vesper-checkbox-disabled"
>
  <button
    aria-checked="true"
    aria-required="true"
    class="vesper-checkbox-box"
    data-disabled=""
    data-state="checked"
    disabled=""
    role="checkbox"
    type="button"
    value="on"
  >
    <span
      class="vesper-checkbox-indicator"
      data-disabled=""
      data-state="checked"
      style="pointer-events: none;"
    >
      <svg
        class="vesper-checkbox-checked-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 6.07124L8.46804 18.9532H6.67287L2 14.5048L3.17444 13.3868L7.36066 17.3719H7.78025L20.8256 4.95322L22 6.07124Z"
          fill="currentColor"
        />
      </svg>
      <svg
        class="vesper-checkbox-indeterminate-icon"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M22 12.7425H14.0198L12.7498 14H11.2502L9.98017 12.7425H2V11.2575H9.98017L11.2502 10H12.7498L14.0198 11.2575H22V12.7425Z"
          fill="currentColor"
        />
      </svg>
    </span>
  </button>
  <span
    class="vesper-typography vesper-typography-label-md vesper-checkbox-label"
  >
    Label text *
  </span>
</label>
`;
